--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/moon_icon.ico">
+    <link rel="icon" href="./images/moon_icon.ico">
     <title>Moon Programming Language</title>
     <style>
         body {
@@ -244,7 +244,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/moon_logo.png" alt="Moon Programming Language Logo" style="height: 40px;">
+                <img src="images/moon_logo.png" alt="Moon Programming Language Logo" style="height: 96px;">
             </div>
             <div class="menu">
                 <a href="#home">Home</a>
@@ -289,16 +289,17 @@
     <section class="content cta-section" id="get-started">
         <h2>Ready to Start Your Journey with Moon?</h2>
         <p>Contribute to the development of Moon on GitHub, or download our latest release to get started.</p>
-        <button onclick="window.location.href='https://github.com/MichaelPisani/Moon';">Visit GitHub</button>
-        <button onclick="window.location.href='https://huggingface.co/BenevolenceMessiah';">HuggingFace Account</button>
+        <button onclick="window.location.href='https://github.com/BenevolenceMessiah/Moon';">Visit GitHub</button>
+        <button onclick="window.location.href='https://huggingface.co/BenevolenceMessiah';">Visit HuggingFace Account</button>
+        <button onclick="window.location.href='https://huggingface.co/BenevolenceMessiah/Qwen2.5-Coder-7B-3x-Instruct-TIES-v1.1';">Benevolence Messiah Qwen2.5 Coder 7B 3x Instruct TIES v1.1</button>
     </section>
 
     <section class="content community-section" id="community">
         <h2>Join the Moon Community</h2>
         <p>Connect with like-minded developers and enthusiasts who are passionate about pushing the boundaries of modern technology with the Moon programming language. Collaborate, contribute, and be a part of the future.</p>
         <div class="community-links">
-            <a href="https://github.com/MichaelPisani/Moon" target="_blank" class="community-button">GitHub</a>
-            <a href="https://discord.com/invite/example" target="_blank" class="community-button">Join Our Discord</a>
+            <a href="https://github.com/BenevolenceMessiah/Moon" target="_blank" class="community-button">GitHub</a>
+            <a href="https://discord.gg/9R74qxbqDn" target="_blank" class="community-button">Join Our Discord</a>
         </div>
     </section>
 
@@ -311,7 +312,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Moon Programming Language Foundation | Created with Benevolence by Michael Pisani 🌙</p>
+        <p>&copy; 2024 Moon Programming Language Foundation | Created with Love by Michael Pisani, and lots of AI! 🌙</p>
     </footer>
 
     <script>
@@ -340,10 +341,8 @@
 
         // Play audio file
         function playAudio() {
-            const audio = new Audio('audio/Benevolence_Messiah_-_Amethyst_Pocket_(Part I).flac');
+            const audio = new Audio('./audio/Benevolence_Messiah_-_Amethyst_Pocket_(Part I).flac');
             audio.play();
         }
     </script>
 </body>
-
-</html>
