--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         }
 
         .hero h1 {
-            font-size: clamp(2rem, 5vw, 4rem);
+            font-size: clamp(2.5rem, 7vw, 4rem);
             text-align: center;
             color: #ffba08;
             animation: glowText 3s ease-in-out infinite alternate,
@@ -101,7 +101,9 @@
             text-shadow: 0 0 20px rgba(255, 186, 8, 0.8);
             padding: 0 1rem;
             margin-bottom: 2rem;
-            margin-top: clamp(100px, 20vh, 155px);
+            margin-top: clamp(175px, 30vh, 230px);
+            position: relative;
+            z-index: 2;
         }
 
         @keyframes backgroundFade {
@@ -501,14 +503,14 @@
             background: #1e1e1e;
             border-radius: 8px;
             padding: 1.5rem;
-            margin: 2rem 0;
+            margin: 2rem auto;
             position: relative;
             overflow: hidden;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            width: 100%;
-            max-width: 100%;
+            width: 90%;
+            max-width: 800px;
             overflow-x: auto;
-            -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+            -webkit-overflow-scrolling: touch;
         }
 
         .code-example::before {
@@ -523,10 +525,11 @@
         .code-block {
             font-family: 'Fira Code', monospace;
             color: #e0e0e0;
-            line-height: 1.6;
-            white-space: pre-wrap; /* Allows text to wrap */
-            word-break: break-word; /* Prevents overflow on mobile */
-            font-size: 0.9rem; /* Slightly smaller font on mobile */
+            line-height: 1.5;
+            white-space: pre;
+            font-size: 0.9rem;
+            width: fit-content;
+            min-width: 100%;
         }
 
         .keyword { color: #569cd6; }
@@ -806,7 +809,7 @@
                 /* Increase padding for better readability on mobile */
                 padding: 0 1.5rem;
                 /* Adjust top margin for mobile */
-                margin-top: clamp(180px, 35vh, 250px);
+                margin-top: clamp(255px, 35vh, 325px);
             }
         }
 
@@ -814,7 +817,7 @@
         @media (max-width: 480px) {
             .hero h1 {
                 /* Even more margin for the smallest screens */
-                margin-top: clamp(200px, 40vh, 300px);
+                margin-top: clamp(275px, 40vh, 375px);
                 padding: 0 2rem;
             }
         }
@@ -823,7 +826,7 @@
         @media (max-width: 768px) {
             .code-example {
                 padding: 1rem;
-                margin: 1.5rem 0;
+                margin: 1.5rem auto;
                 font-size: 0.85rem; /* Even smaller font for mobile */
             }
             
