--- a/index-vaporwave.html
+++ b/index-vaporwave.html
@@ -1074,7 +1074,7 @@
     <section class="hero" id="home">
         <h1>Welcome to Moon Programming Language 🌙</h1>
         <div class="audio-container">
-            <div class="audio-label">🎵 Listen to "Hill Tops"</div>
+            <div class="audio-label">🎵 Listen to "Hill Tops (Benevolence Messiah Remix)"</div>
             <iframe width="300" 
                     height="166" 
                     scrolling="no" 
@@ -1088,7 +1088,7 @@
 
     <section class="content intro-section" id="about">
         <h2>Why Moon?</h2>
-        <p>Moon is a new, open-source programming language inspired by Python but designed for high-performance computing, AI, and emerging technologies.</p>
+        <p>Moon is a new, open-source programming language created and built by Michael Pisani (AKA, Benevolence Messiah), founder and sole member of the Moon Programming Language Foundation; Moon is inspired by Python but designed for high-performance computing, AI, and emerging technologies. and has several unique facets associated with it...</p>
         
         <div class="code-example">
             <pre class="code-block">
