Small continuity error fix...

--- a/index-vaporwave.html
+++ b/index-vaporwave.html
@@ -1088,7 +1088,7 @@
 
     <section class="content intro-section" id="about">
         <h2>Why Moon?</h2>
-        <p>Moon is a new, open-source programming language created and built by Michael Pisani (AKA, Benevolence Messiah), founder and sole member of the Moon Programming Language Foundation; Moon is inspired by Python but designed for high-performance computing, AI, and emerging technologies. and has several unique facets associated with it...</p>
+        <p>Moon is a new, open-source programming language created and built by Michael Pisani (AKA, Benevolence Messiah), founder and sole member of the Moon Programming Language Foundation; Moon is inspired by Python but designed for high-performance computing, AI, and emerging technologies. Moon notably has several unique facets associated with it...</p>
         
         <div class="code-example">
             <pre class="code-block">
