--- a/index-vaporwave.html
+++ b/index-vaporwave.html
@@ -83,9 +83,10 @@
             width: 100%;
             height: 100%;
             background: url('images/moon_background.svg') center/cover no-repeat;
-            transform: scale(2);
-            animation: zoomBackground 120s linear infinite;
-            z-index: 0;
+            transform: scale(4);
+            animation: zoomBackground 60s linear infinite;
+            z-index: -1;
+            pointer-events: none;
         }
 
         .hero > * {
@@ -328,9 +329,12 @@
         .donation-section {
             margin-top: 4rem;
             text-align: center;
-            background-color: #222;
+            background: linear-gradient(45deg, rgba(18, 4, 88, 0.8), rgba(77, 15, 140, 0.8));
             padding: 2rem;
             border-radius: 10px;
+            position: relative;
+            z-index: 10;
+            box-shadow: 0 0 20px rgba(255, 0, 255, 0.2);
         }
 
         .donation-section h2 {
@@ -340,7 +344,7 @@
 
         .donation-section p {
             font-size: 1rem;
-            margin-bottom: 1.5rem;
+            margin: 1rem 0;
         }
 
         /* Added responsive menu styles */
@@ -379,14 +383,11 @@
         }
 
         .audio-container {
-            margin: 2rem 0;
-            width: 100%;
-            max-width: 500px;
-            background: rgba(0, 0, 0, 0.2);
-            padding: 1rem;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(255, 186, 8, 0.2);
-            transition: opacity 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+            position: relative;
+            z-index: 1000;
+            pointer-events: all;
+            margin: 2rem auto;
+            background: rgba(0, 0, 0, 0.5);
         }
 
         .audio-container.playing {
@@ -400,8 +401,11 @@
         }
 
         .audio-container iframe {
-            border-radius: 8px;
-            width: 100%;
+            position: relative;
+            z-index: 1001;
+            pointer-events: all;
+            width: 100% !important;
+            height: 166px !important;
         }
 
         .audio-label {
@@ -638,20 +642,21 @@
             width: 100%;
             height: 100%;
             background: url('images/moon_background.svg') center/cover no-repeat;
-            transform: scale(2);
-            animation: zoomBackground 120s linear infinite;
-            z-index: 0;
+            transform: scale(4);
+            animation: zoomBackground 60s linear infinite;
+            z-index: -1;
+            pointer-events: none;
         }
 
         @keyframes zoomBackground {
             0% {
-                transform: scale(2);
+                transform: scale(4) rotate(0deg);
             }
             50% {
-                transform: scale(1);
+                transform: scale(2) rotate(24deg);
             }
             100% {
-                transform: scale(2);
+                transform: scale(4) rotate(0deg);
             }
         }
 
@@ -1040,6 +1045,91 @@
                 left: 20px;
             }
         }
+
+        /* Optimize particle effects for mobile */
+        @media (max-width: 768px) {
+            .hero::after {
+                /* Simplified particle effect for mobile */
+                background: radial-gradient(1.5px 1.5px at 50% 50%, rgba(255, 186, 8, 0.8) 100%, transparent);
+                background-size: 15px 15px;
+                opacity: 0.3;
+                animation: none; /* Disable complex animations on mobile */
+            }
+
+            .hero h1 {
+                /* Simplified glow effect for mobile */
+                animation: simplifiedGlow 2s ease-in-out infinite alternate;
+            }
+        }
+
+        @keyframes simplifiedGlow {
+            0% { text-shadow: 0 0 10px #ffba08; }
+            100% { text-shadow: 0 0 20px #ffba08; }
+        }
+
+        /* Enhanced Rain AI button */
+        .rain-ai-button {
+            background: linear-gradient(45deg, #ff00ff, #00ffff);
+            border: 2px solid #ffffff;
+            box-shadow: 0 0 20px rgba(255, 0, 255, 0.5);
+            transform: scale(1.1);
+            padding: 1.2rem 2.5rem;
+            font-size: 1.3rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .rain-ai-button::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(
+                45deg,
+                transparent,
+                rgba(255, 255, 255, 0.4),
+                transparent
+            );
+            transform: rotate(45deg);
+            animation: shimmerRain 3s infinite;
+        }
+
+        /* Enhanced Discord button */
+        .discord-button {
+            background: #5865F2;
+            border: none;
+            padding: 1rem 2rem;
+            color: white;
+            border-radius: 8px;
+            font-weight: bold;
+            box-shadow: 0 0 15px rgba(88, 101, 242, 0.5);
+            transition: all 0.3s ease;
+        }
+
+        .discord-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 0 25px rgba(88, 101, 242, 0.7);
+        }
+
+        /* Bio button styling */
+        .bio-button {
+            display: inline-block;
+            margin: 2rem auto;
+            padding: 1rem 2rem;
+            background: linear-gradient(45deg, #120458, #4d0f8c);
+            border: 1px solid var(--primary-color);
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+        }
+
+        .bio-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(255, 0, 255, 0.3);
+        }
     </style>
     <meta property="og:title" content="Moon Programming Language">
     <meta property="og:description" content="The next generation programming language inspired by Python, built for high-performance computing, AI, and interoperability">
@@ -1073,14 +1163,16 @@
 
     <section class="hero" id="home">
         <h1>Welcome to Moon Programming Language 🌙</h1>
-        <div class="audio-container">
+        <div class="audio-container" style="position: relative; z-index: 100;">
             <div class="audio-label">🎵 Listen to "Hill Tops (Benevolence Messiah Remix)"</div>
-            <iframe width="300" 
-                    height="166" 
-                    scrolling="no" 
-                    frameborder="no" 
-                    allow="autoplay" 
-                    src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/benevolence-messiah/hill-tops-benevolence-messiah&color=%23ff00ff&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=true&show_teaser=true&visual=true">
+            <iframe 
+                width="300" 
+                height="166" 
+                scrolling="no" 
+                frameborder="no" 
+                allow="autoplay"
+                style="position: relative; z-index: 10; pointer-events: auto;"
+                src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/benevolence-messiah/hill-tops-benevolence-messiah&color=%23ff00ff&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=true&show_teaser=true&visual=true">
             </iframe>
         </div>
         <button class="audio-button" onclick="window.open('https://e987d2133014d28cb1.gradio.live', '_blank')">Rain (AI Assistant)</button>
@@ -1158,8 +1250,8 @@
         <h2>Support the Moon Programming Language Foundation</h2>
         <p>If you'd like to support our work, consider donating. Your contributions help us keep Moon free, open-source, and accessible to everyone.</p>
         <p><strong>PayPal:</strong> [PayPal Donation Link]</p>
-        <p><strong>Bitcoin Wallet:</strong> [Bitcoin Wallet Address]</p>
-        <p><strong>Ethereum Wallet:</strong> [Ethereum Wallet Address]</p>
+        <p><strong>Bitcoin Wallet:</strong> bc1q4fwzcfpcm0s6pda7grt3w9a6hqyyxrzf68thcf</p>
+        <p><strong>Ethereum Wallet:</strong> 0x775b3Ba958ceA83Ed567BAe6eC136e121877508D</p>
     </section>
 
     <section class="content code-examples" id="examples">
@@ -1186,6 +1278,12 @@ model = ai.Model() >>
     <footer>
         <p>&copy; 2024 Moon Programming Language Foundation | Created with Love by Michael Pisani, and lots of AI! 🌙</p>
     </footer>
+
+    <div class="bio-container">
+        <a href="web_pages/biography.html" class="bio-button">
+            Learn More About Michael Pisani
+        </a>
+    </div>
 
     <script>
         // Simple animation for buttons
@@ -1310,5 +1408,10 @@ model = ai.Model() >>
                 window.location.href = 'index.html';
             }
         }
+    </script>
+
+    <script src="js/content-manager.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', loadContent);
     </script>
 </body>
