--- a/index.html
+++ b/index.html
@@ -961,6 +961,7 @@
                 animation: glowText 3s ease-in-out infinite alternate,
                           floatEffect 6s ease-in-out infinite,
                           rainbowGlow 8s linear infinite;
+                text-shadow: 0 0 20px rgba(255, 186, 8, 0.8);
             }
         }
 
