--- a/index-vaporwave.html
+++ b/index-vaporwave.html
@@ -63,13 +63,11 @@
         .hero {
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: flex-start;
+            align-items: center;
             min-height: 100vh;
-            width: 100%;
-            position: relative;
-            padding-top: 80px; /* Add space for header */
-            z-index: 1;
+            padding-top: 100px;
+            box-sizing: border-box;
         }
 
         .hero::before {
@@ -92,16 +90,10 @@
         }
 
         .hero h1 {
+            margin: 0 0 2rem 0;
             font-size: clamp(2.5rem, 7vw, 4rem);
             text-align: center;
-            color: #ffba08;
-            animation: glowText 3s ease-in-out infinite alternate,
-                       floatEffect 6s ease-in-out infinite,
-                       rainbowGlow 8s linear infinite;
-            text-shadow: 0 0 20px rgba(255, 186, 8, 0.8);
             padding: 0 1rem;
-            margin-bottom: 2rem;
-            margin-top: clamp(175px, 30vh, 230px);
             position: relative;
             z-index: 2;
         }
@@ -1358,6 +1350,19 @@
                 width: 80%;
                 max-width: 300px;
                 text-align: center;
+            }
+        }
+
+        /* Update the mobile media query */
+        @media (max-width: 768px) {
+            .hero h1 {
+                /* Remove animations for vaporwave theme on mobile */
+                animation: none;
+                /* Add static vaporwave styling */
+                color: var(--primary-color);
+                text-shadow: 
+                    2px 2px var(--secondary-color),
+                    -2px -2px var(--primary-color);
             }
         }
     </style>
